--- a/index.html
+++ b/index.html
@@ -4,39 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Face Comparison</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* 设置高度占满整个视口 */
-            margin: 0; /* 去除默认的 body 边距 */
-        }
+    <style type="text/css">
+  * {
+    margin: 0;
+    padding: 0;
+  }
 
-        .button {
-            text-align: center;
-        }
+  ul, li {
+    list-style: none;
+  }
 
-        .button button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+  a {
+    text-decoration: none;
+  }
 
-        .button button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  input {
+    outline-style: none;
+    border: 0px;
+  }
+
+  #form1 {
+    margin-top: 20px;
+    width: 80%;
+    margin: 2px auto;
+  }
+
+  #form1 form span {
+    color: #999;
+  }
+
+  .row {
+    margin-top: 25px;
+    height: 50px;
+    line-height: 26px;
+    border-bottom: 1px solid #c7c6c6;
+    width: 100%;
+  }
+
+  .input {
+    position: relative;
+    width: 100%;
+    height: 26px;
+  }
+
+  .input input {
+    display: block;
+    width: 100%;
+    height: 26px;
+    border: none;
+    background: none;
+    outline: none;
+  }
+
+  .input label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 26px;
+    line-height: 26px;
+    font-size: 14px;
+    color: #999;
+  }
+
+  .select select {
+    display: block;
+    width: 100%;
+    border: none;
+    outline: none;
+  }
+
+  input[type=date]::-webkit-inner-spin-button {
+    visibility: hidden;
+  }
+
+  .button {
+    width: 100%;
+    height: 40px;
+    background: #ff961e;
+    outline: none;
+    margin: 20px 0 30px 0;
+  }
+
+  .button button {
+    border: 0px;
+    background-color: transparent;
+    color: white;
+    width: 100%;
+    height: 40px;
+    margin: 0 auto;
+    font-size: 17px;
+  }
+
+  .buttonphoto button {
+    border: 0px;
+    background-color: gray;
+    color: white;
+    width: 100%;
+    height: 40px;
+    margin: 0 auto;
+    font-size: 17px;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>
+
 </head>
 <body>
     <h1>Face Comparison</h1>
     <div>
-        <input type="file" id="image1Input" onchange="previewImage(this)">
-        <img id="image1" src="" alt="Image 1">
+        <input type="file" id="image1Input" style="display:none;" onchange="previewImage(this)">
+        <div class="buttonphoto">
+            <button type="button" onclick="document.getElementById('image1Input').click()">上传学籍图片</button>
+        </div>
+        <img id="image1" src="" alt="Image 1" width="200">
     </div>
     <div>
         <!-- 使用拍照上传方式 -->
