--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             width: 80%;
             margin: 20px auto;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: none #ccc;
             border-radius: 10px;
         }
 
@@ -31,7 +31,7 @@
             display: block;
             margin-bottom: 5px;
             font-size: 14px;
-            color: #333;
+            color: #999;
         }
 
         .row input {
@@ -40,12 +40,12 @@
             font-size: 14px;
             border: none;
             border-bottom: 1px solid #c7c6c6;
-            background-color: #f9f9f9;
+            background-color: #ffffff;
         }
 
         .row p {
             font-size: 14px;
-            color: #999;
+            color: #000000;
         }
 
         .buttonphoto, .button {
